Docker build and run environemnt for c2m
- Dockerfile to build a container for c2m
- A script to build the container
- A script to run the container
- A wrapper script to run c2m in the container

Issue-ID: DOC-762

Signed-off-by: Gergely Csatari <gergely.csatari@nokia.com>
Change-Id: Icea55512658bbb8a78934f2a5b4313345927e7b7